# terraform-app-engine

./: .gcloudignore  .gitignore  .pre-commit-config.yaml  README.md  main.tf  provider.tf  pyproject.toml  requirements.txt  variables.tf
app/: main.py
docs/: TF_README.md
src/gae_hello_world/: __init__.py
