[project]
name = "gae_hello_world"
authors = [
    {name = "heuristic-pedals", email = "heuristicpedals@gmail.com"}
]
description = "Experiments with Terraform and GCP App Engine."
readme = "README.md"
dynamic = ["version", "dependencies"]
requires-python = ">=3.11, <3.12"

[project.urls]
Repository = "https://github.com/heuristic-pedals/terraform-app-engine"

[project.optional-dependencies]
test = [
    "pytest >= 8.2.2, < 9",
    "pytest-randomly >= 3.15.0, < 4",
    "pytest-sugar >= 1.0.0, < 2",
    "hypothesis >= 6.103.1, < 7",
    "coverage >=7.5.3, < 8",
]
docs = []
dev = [
    "pre-commit >= 3.7.1, < 4",
    "ruff >= 0.4.8, < 1",
    "gae_hello_world[test]",
    "gae_hello_world[docs]",
]

[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "gae_hello_world.__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]
include = ["gae_hello_world"]
namespaces = false

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["D", "I", "W", "F", "C", "S", "N"]
ignore = ["D105"]

[tool.ruff.lint.isort]
known-first-party = ["gae_hello_world"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",  # asserts allowed in tests
]

[tool.coverage.run]
source = ["./src"]

[tool.pytest.ini_options]
testpaths = ["./tests"]
